fix header wrapping issue on mobile devices

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -186,4 +186,9 @@ $break-medium: 750px;
       display: block;
     };
 }
+
+//Util
+.flex-space-between {
+    justify-content: space-between;
+}
   
